# get_game_genres

./: .gitignore  README.md  common.py  common_utils.py  config.py  db.py  main.py  pyproject.toml  requirements.txt
etc/: _remove_umlauts_from_genres.py  _view_db_Dump.py  _view_db_site_by_genres.py
export_import/: export.py  import.py
generate_games/: game_by_genres.json  game_by_genres__hardcored.json  generate_games.py
generate_games/etc/: fill_DLC.py
generate_genres/: create.py  genres.json
genre_translate_file/: create.py  load.py  merge.py
genre_translate_file/data/: genre_translate.json
migrations/: 001.py
parsers/: __init__.py  ag_ru.py  base_parser.py  dump.py  gamebomb_ru.py  gamefaqs_gamespot_com.py  gameguru_ru.py  gamer_info_com.py  gamespot_com.py  igromania_ru.py  iwgs_games.py  metacritic_com.py  mobygames_com.py  playground_ru.py  spong_com.py  squarefaction_ru.py  stopgame_ru.py  store_steampowered_com.py  vgtimes_ru.py
parsers/.deprecated/: README.md  gamefaqs_gamespot_com.py  gamer_info_com.py  iwgs_games.py  mobygames_com.py  spong_com.py
src/get_game_genres/: common.py  db.py
src/get_game_genres/app_parser/: main.py
src/get_game_genres/app_web_api/: main.py
src/get_game_genres/etc/: _remove_umlauts_from_genres.py  _view_db_Dump.py  _view_db_site_by_genres.py  get_processed_genres.py  pretty_FILE_NAME_GAMES_HARDCORED.py
src/get_game_genres/export_import/: export.py  import.py
src/get_game_genres/generate_games/: game_by_genres.json  (+2 more)
tests/: test_web_api.py
web_api/: main.py
webserver/: main.py  test.py
(+27 files in other folders)
