[project]
name = "get-game-genres"
version = "2026.4.17"
description = "Парсер собирает и актуализирует жанры игр из разных сайтов"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4==4.11.1",
    "flask==2.2.5",
    "peewee==3.15.4",
    "requests==2.28.1",
    "simple-wait==1.0.8",
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE.txt"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
